# staticmap

./: .gitignore  CHANGELOG.md  Makefile  Makefile.config  README.md  mypy.ini  pyproject.toml
.github/workflows/: .tests-python.yml
staticmap/: staticmap.py  tests.py
